kubernetes/applications/karma/karma-manifest-example.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: karma


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karma
  namespace: karma
  labels:
    app: karma
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: karma
  template:
    metadata:
      labels:
        app: karma
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        fsGroup: 65534
      containers:
        - name: karma
          image: ghcr.io/prymitive/karma:v0.122
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: config-host
              mountPath: /etc/karma
      volumes:
        - name: config-cm
          configMap:
            name: karma-config
        - name: config-host
          persistentVolumeClaim:
            claimName: karma-config-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: karma
  namespace: karma
spec:
  type: ClusterIP
  selector:
    app: karma
  ports:
    - name: http
      port: 8080
      targetPort: 8080
