kubernetes/applications/karma/karma-service.yml
apiVersion: v1
kind: Service
metadata:
  name: karma
  namespace: karma
spec:
  type: ClusterIP
  selector:
    app: karma
  ports:
    - name: http
      port: 8080
      targetPort: 8080
