kubernetes/applications/karma/karma-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karma-ingress
  namespace: karma
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: karma-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - karma.example.com
      secretName: karma-tls
  rules:
    - host: karma.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karma
                port:
                  number: 8080
